--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,15 +3,37 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    font-family: "karla-regular", "Courier New", monospace; 
+}
 body{
     width: 1360px;
     height: 731px;
+    padding: 1rem 1rem 0 1rem;
     margin: 0 auto;
 }
+.flex{
+    display: flex;
+    align-items: center;
+}
+header{
+    text-transform: uppercase;
+    font-family: "karla-bold";
+    justify-content: space-between;
+    background: #fff;
+    height: 103px;
+    position: sticky;
+    top: 0;
+}
+
+
+
+
+
+
 .image-grid{
     display: grid;
-    margin-bottom: 5vh;
-    gap: 20px;
+  
 }
 .image-item-single{
     display: grid;
@@ -25,5 +47,4 @@ img{
     width: 100%;
     height: 100%;
     display: block;
-    margin-bottom: 2vh;
 }
