--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: "karlab";
+    src: url(../fonts/Karla-Bold.ttf);
+}
+@font-face {
+    font-family: "karlar";
+    src: url(../fonts/Karla-Regular.ttf);
+}
+@font-face {
+    font-family: "karlai";
+    src: url(../fonts/Karla-Italic.ttf);
+}
 *{
     margin: 0;
     padding: 0;
@@ -24,16 +36,26 @@ header{
     height: 103px;
     position: sticky;
     top: 0;
+    font-family: "karlab";
 }
-
-
-
-
-
-
+a{
+    text-decoration: none;
+    color: #323a45;
+}
+h1{
+    text-transform: uppercase;
+    font-size: 1.5rem;
+}
+.navright{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+p{
+    font-size: 1.1rem;
+}
 .image-grid{
     display: grid;
-  
 }
 .image-item-single{
     display: grid;
@@ -47,4 +69,8 @@ img{
     width: 100%;
     height: 100%;
     display: block;
+}
+img:hover{
+    opacity: 0.5;
+    transition: 0.3s;
 }
